ola-parser/src/testdata/syntaxTests/visibility/interface/function_internal.sol
interface I {
	fn f() internal;
}
// ----
// TypeError 1560: (15-37): Functions in interfaces must be declared external.
